--- a/styles/doctor.module.css
+++ b/styles/doctor.module.css
@@ -15,3 +15,10 @@
     font-size: 30px;
     font-weight: 500;
 }
+
+.readOnlyInput{
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;  
+}
